# 1person

./: .gitignore  DEPLOY.md  INSERT_ARTICLES_GUIDE.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  env.example
super_club_backend/: .gitignore  API_README.md  Dockerfile  LOGGING_GUIDE.md  QUICK_INSERT.md  TEST_MARKDOWN.md  add_user_role.py  create_admin.py  demo_admin_data.json  demo_admin_setup.py  docker-entrypoint.sh  entrypoint.sh  init_db.py  insert_articles_simple.py  insert_test_articles.py  insert_test_articles.sql  insert_via_api.sh  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt  run.py  seed_data.py  test_api.py  test_markdown_api.py  test_markdown_article.py  update_models_for_mysql.py
super_club_backend/app/: main.py
super_club_backend/app/api/v1/: admin.py  auth.py  content.py  events.py  (+4 more)
super_club_backend/app/core/: admin_dependencies.py  config.py  database.py  dependencies.py  logging.py  middleware.py  security.py
super_club_backend/app/models/: __init__.py  carousel.py  connection.py  content.py  event.py  favorite.py  invitation.py  like.py  notification.py  project.py  talent.py  user.py
super_club_backend/app/schemas/: auth.py  common.py  user.py
super_club_backend/articles/: article-1.md  article-2.md  article-3.md  article-4.md  test-article.md
super_club_backend/docs/: API_DOCUMENTATION.md  DEVELOPMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md
super_club_backend/tests/: __init__.py  conftest.py  test_auth.py  test_content.py  test_events.py  test_health.py  test_models.py  test_security.py  test_users.py
(+63 files in other folders)
